# cd1756-Azure-Applications-project

./: .gitignore  WRITEUP.md  _list_drivers.py  config.py  pyproject.toml  requirements.txt  run_local.py
FlaskWebProject/: __init__.py  views.py
