[project]
name = "cd1756-azure-applications-project"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "alembic==1.13.0",
    "azure-common==1.1.24",
    "azure-nspkg==3.0.2",
    "azure-storage==0.36.0",
    "certifi==2019.11.28",
    "cffi==1.16.0",
    "chardet==3.0.4",
    "click==7.1.2",
    "cryptography>=2.8",
    "flask==2.0.3",
    "flask-login==0.5.0",
    "flask-session==0.4.0",
    "flask-sqlalchemy==2.5.1",
    "flask-wtf==0.14.3",
    "idna==2.8",
    "itsdangerous==2.0.1",
    "jinja2==3.0.1",
    "mako>=1.3.1",
    "markupsafe==2.0.1",
    "msal==1.13.0",
    "pip==10.0.1",
    "pycparser==2.20",
    "pyodbc==5.2.0",
    "pyopenssl==19.1.0",
    "python-dateutil==2.8.1",
    "python-editor==1.0.4",
    "requests==2.22.0",
    "setuptools==39.0.1",
    "six==1.14.0",
    "sqlalchemy==1.4.49",
    "urllib3==1.25.8",
    "werkzeug==2.0.3",
    "wtforms==2.2.1",
]
